force-app/main/default/objects/User/fields/APCN__c.field-meta.xml
<CustomField>
    <fullName>APCN__c</fullName>
    <description>SSSW</description>
    <externalId>true</externalId>
    <label>APCN</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>