force-app/main/default/objects/User/fields/APSNumber__c.field-meta.xml
<CustomField>
    <fullName>APSNumber__c</fullName>
    <description>APS Number used for Lead Seeker point allocation</description>
    <inlineHelpText>APS Number used for Lead Seeker point allocation</inlineHelpText>
    <label>APS Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>