force-app/main/default/objects/User/fields/Compensation_Limit__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Limit__c</fullName>
    <label>Compensation Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>