force-app/main/default/objects/User/fields/Current_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Current_Owner_Role__c</fullName>
    <formula>IF(Profile.Name == &apos;LPO Partner Community User&apos;, Text(Contact.Account.Sales_Segment__c),
BLANKVALUE(UserRole.RollupDescription,  UserRole.Name))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Owner Role</label>
    <type>Text</type>
</CustomField>