force-app/main/default/objects/User/fields/Disallow_Community_Stepup__c.field-meta.xml
<CustomField>
    <fullName>Disallow_Community_Stepup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls the user access to &apos;AP Community User&apos;,If checked user access to community will be denied.</description>
    <label>Disallow Community Stepup</label>
    <type>Checkbox</type>
</CustomField>