force-app/main/default/objects/User/fields/DPID__c.field-meta.xml
<CustomField>
    <fullName>DPID__c</fullName>
    <description>2014-06 CCU - CCU Portal QAS implementation - allows portal user to update their address</description>
    <label>DPID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>