force-app/main/default/objects/User/fields/Gold_Sheet_Managers_License__c.field-meta.xml
<CustomField>
    <fullName>Gold_Sheet_Managers_License__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SAM Gold Sheet Managers license for large orgs.</description>
    <label>Gold Sheet Managers License</label>
    <type>Checkbox</type>
</CustomField>