force-app/main/default/objects/User/fields/IdeasSuperUser__c.field-meta.xml
<CustomField>
    <fullName>IdeasSuperUser__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Grant a user with additional permissions in terms of community Ideas (AdvancedCommunities)</description>
    <label>Ideas Super User</label>
    <type>Checkbox</type>
</CustomField>