force-app/main/default/objects/User/fields/Last_Business_Enablement_Survey_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Business_Enablement_Survey_Date__c</fullName>
    <label>Last Business Enablement Survey Date</label>
    <type>DateTime</type>
</CustomField>