force-app/main/default/objects/User/fields/LEGACY_ID__c.field-meta.xml
<CustomField>
    <fullName>LEGACY_ID__c</fullName>
    <externalId>true</externalId>
    <label>LEGACY ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>