force-app/main/default/objects/User/fields/Licence_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>Licence_Type_Description__c</fullName>
    <description>This field has been added to assist with MH. When a some selects a user, they don&apos;t know if which user type they are. ie consumer or salesforce user.</description>
    <formula>Profile.UserLicense.Name</formula>
    <label>Licence Type Description</label>
    <type>Text</type>
</CustomField>