force-app/main/default/objects/User/fields/Merchant_Portal_T_C_Last_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Portal_T_C_Last_Accepted__c</fullName>
    <description>Terms and Conditions for the Merchant portal accepted time and date</description>
    <label>Merchant Portal T &amp; C Last Accepted</label>
    <type>DateTime</type>
</CustomField>