force-app/main/default/objects/User/fields/MyNetwork_Retail_User__c.field-meta.xml
<CustomField>
    <fullName>MyNetwork_Retail_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes that this user is a MyNetwork Retail User. These users are subject to a different logout procedure for the MyNetwork Community to ensure their Oracle session is killed when logging out</description>
    <inlineHelpText>Denotes that this user is a MyNetwork Retail User. These users are subject to a different logout procedure for the MyNetwork Community to ensure their Oracle session is killed when logging out.</inlineHelpText>
    <label>MyNetwork Retail User</label>
    <type>Checkbox</type>
</CustomField>