force-app/main/default/objects/User/fields/Network__c.field-meta.xml
<CustomField>
    <fullName>Network__c</fullName>
    <description>Field used to store the  users network. Used to display information in list views</description>
    <label>Network</label>
    <length>30</length>
    <type>Text</type>
</CustomField>