force-app/main/default/objects/User/fields/OID_ID__c.field-meta.xml
<CustomField>
    <fullName>OID_ID__c</fullName>
    <externalId>true</externalId>
    <label>OID ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>