force-app/main/default/objects/User/fields/RNPReportingManager__c.field-meta.xml
<CustomField>
    <fullName>RNPReportingManager__c</fullName>
    <description>RNP Reporting Hierarchy for State Network Teams</description>
    <inlineHelpText>RNP Reporting Hierarchy for State Network Teams</inlineHelpText>
    <label>RNP Reporting Manager</label>
    <relationshipName>RNPRelatedReportingUsers</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>