force-app/main/default/objects/User/fields/Sales_Director__c.field-meta.xml
<CustomField>
    <fullName>Sales_Director__c</fullName>
    <inlineHelpText>Person in this field will be the approver of Segmentation Change Requests from Organisations owned by the user.</inlineHelpText>
    <label>{Hidden}Sales Director</label>
    <relationshipName>Sales_Director</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>