force-app/main/default/objects/User/fields/Sales_General_Manager__c.field-meta.xml
<CustomField>
    <fullName>Sales_General_Manager__c</fullName>
    <formula>Manager.Manager.ManagerId</formula>
    <label>Sales Director</label>
    <type>Text</type>
</CustomField>