force-app/main/default/objects/User/fields/Seller_Manager__c.field-meta.xml
<CustomField>
    <fullName>Seller_Manager__c</fullName>
    <formula>Manager.ManagerId</formula>
    <label>Seller Manager</label>
    <type>Text</type>
</CustomField>