force-app/main/default/objects/User/fields/Street2__c.field-meta.xml
<CustomField>
    <fullName>Street2__c</fullName>
    <description>SSSW</description>
    <label>Street2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>