force-app/main/default/objects/User/fields/UserLastSurveyDate__c.field-meta.xml
<CustomField>
    <fullName>UserLastSurveyDate__c</fullName>
    <description>This field capture the last Survey Date that was sent to the user (Requestor)</description>
    <inlineHelpText>Last Survey Date</inlineHelpText>
    <label>User Last Survey Date</label>
    <type>Date</type>
</CustomField>