force-app/main/default/objects/User/fields/Work_Center_Code__c.field-meta.xml
<CustomField>
    <fullName>Work_Center_Code__c</fullName>
    <label>Work Center Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>