force-app/main/default/objects/User/validationRules/Phase_2_UserName_not_exceed_60_charactor.validationRule-meta.xml
<ValidationRule>
    <fullName>Phase_2_UserName_not_exceed_60_charactor</fullName>
    <active>true</active>
    <errorConditionFormula>LEN( Username)&gt;=60 &amp;&amp; $User.Id &lt;&gt; &quot;0059000000Pibe2&quot;</errorConditionFormula>
    <errorDisplayField>Username</errorDisplayField>
    <errorMessage>User Name should be shorter than 60 charactors.</errorMessage>
</ValidationRule>