force-app/main/default/objects/User/validationRules/SSSW_Prevent_Modify_user_name.validationRule-meta.xml
<ValidationRule>
    <fullName>SSSW_Prevent_Modify_user_name</fullName>
    <active>true</active>
    <description>User validation rule to prevent Service Agent to change First name and Last name.</description>
    <errorConditionFormula>AND (
OR($User.UserRoleId == $Label.SSSW_NSA_ROLE_ID, $User.UserRoleId == $Label.SSSW_SSA_ROLE_ID),
OR(CONTAINS( UserRole.Name , &quot;SSSW South Service Agent&quot;), CONTAINS( UserRole.Name , &quot;SSSW North Service Agent&quot;)),
OR(ISCHANGED(FirstName), ISCHANGED(LastName), ISCHANGED(Email), ISCHANGED( CompanyName ), ISCHANGED(Alias))
)</errorConditionFormula>
    <errorMessage>System prohibits Service Agents to amend First Name, Last Name and email addresses. Please contact your Team Leader or Salesforce Administrator.</errorMessage>
</ValidationRule>