force-app/main/default/objects/User/validationRules/WCC_is_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>WCC_is_mandatory</fullName>
    <active>true</active>
    <description>WCC is mandatory for User License equals to Salesforce</description>
    <errorConditionFormula>AND( ISBLANK(Work_Center_Code__c), 
Licence_Type_Description__c = &apos;Salesforce&apos;, 
NOT($Profile.Name = &apos;System Administrator&apos;))</errorConditionFormula>
    <errorDisplayField>Work_Center_Code__c</errorDisplayField>
    <errorMessage>Please provide Work Centre Code</errorMessage>
</ValidationRule>