force-app/main/default/objects/User/listViews/All_Users_Internal.listView-meta.xml
<ListView>
    <fullName>All_Users_Internal</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CORE.USERS.ADDRESS_CITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.USERTYPE</field>
        <operation>equals</operation>
        <value>S</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>SSSW - Service Agent</value>
    </filters>
    <filters>
        <field>Sales_Director__c</field>
        <operation>contains</operation>
        <value>SSSW</value>
    </filters>
    <label>All Users - Internal</label>
</ListView>