force-app/main/default/objects/User/listViews/All_Users_Internal_Live_Agent.listView-meta.xml
<ListView>
    <fullName>All_Users_Internal_Live_Agent</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>notEqual</operation>
        <value>BSP Community User</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>notEqual</operation>
        <value>DDC Consumer Community User</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>notEqual</operation>
        <value>Mypost Business Help %26 Support Community User</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>notEqual</operation>
        <value>Merchant Portal Community User</value>
    </filters>
    <filters>
        <field>LIVEAGENT_USER</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Users - Internal Live Agent</label>
</ListView>